# appointments-impl/rest-openapi.yaml
@@ -96,5 +96,19 @@ paths:
                 $ref: "#/components/schemas/Appointment"
           description: "Get appointment"
       tags: ["Appointment"]
-
+    delete:
+      description: Deletes an appointment
+      operationId: deleteAppointment
+      parameters:
+        - in: path
+          name: appointmentId
+          required: true
+          schema:
+            format: int64
+            type: integer
+      responses:
+        204:
+          content:
+            application/json: {}
+      tags: ["Appointment"]
 
